# hr-cost-webapp

./: app.py  pyproject.toml
src/hr_cost/: calendar.py  engine.py  models.py  spec.md
src/hr_cost.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_calendar.py  test_engine_actual_paid.py  test_engine_month.py  test_engine_salary.py
